# goldenshare

./: .env.example  .env.web.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
capture/: tushare_doc_validator_v45.py  tushare_leaf_doc_scraper_v45.py  tushare_publish_manifest_v45.json
docs/: AGENTS.md  README.md  board-and-ranking-datasets-phase1.md  current-architecture-baseline.md  dataset-catalog.md  design-principles.md  frontend-application-phase1.md  ops-execution-decoupling.md  ops-freshness-review-20260330.md  ops-system-phase1-lld.md  ops-system-phase1.md  quote-detail-api-spec-v1.md  release-process-v1.md  share-terminal-architecture-v1.md  subsystems-architecture-governance-v1.md  virtual-split-repo-refactor-plan-v1.md  web-platform-phase1-lld.md  web-platform-phase1.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js  vite.config.ts
lake_console/: AGENTS.md  AGENTS.md.bak.md  README.md  config.local.example.toml
reports/: idx_mins_20260430_30min_available_index_basic.csv  index_common_daily_weekly_monthly_latest_index_basic.csv  index_daily_20260415_index_basic.csv  index_daily_active_index_basic_codes_with_data_20260507.csv
scripts/: AGENTS.md  backfill_top_block_by_year.sh  check_docs_integrity.py  deploy-layered-systemd.sh  deploy-systemd.sh  generate_dataset_catalog.py  goldenshare-date-completeness-worker.service  goldenshare-deploy.sudoers  goldenshare-ops-scheduler.service  goldenshare-ops-worker.service  goldenshare-web.service  psql-remote.sh  (+4 more)
(+2216 files in other folders)
